iter_language/tests/corpus/invalid/queue-kafka-missing-bootstrap.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: queue-kafka-missing-bootstrap.iter
---
Error: queue kafka requires `bootstrap_servers`
   ╭─[queue-kafka-missing-bootstrap.iter:1:7]
   │
 1 │ queue kafka {
   │       ──┬──  
   │         ╰──── queue kafka requires `bootstrap_servers`
   │ 
   │ Help: add `bootstrap_servers = "..."`
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[queue-kafka-missing-bootstrap.iter:1:1]
   │
 1 │ queue kafka {
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
